# pdf-compressor

./: .gitignore  Makefile  app.py  pyproject.toml  pyrightconfig.json  ruff.toml  setting.py
scripts/: build.py  convert.sh
src/services/pdf_compressor/: compressor.py
src/ui/: main_window.py
src/ui/custom/: Widget.py  dialog.py
src/ui/forms/: main.py
src/ui/forms/qt/: main.ui
src/utils/: file.py
ui/: main_window.py
ui/custom/: Widget.py  dialog.py
ui/forms/: main.py
ui/forms/qt/: main.ui
