[project]
name = "pdf-compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.9.0",
]

[dependency-groups]
dev = [
    "cython>=3.1.0",
    "pyinstaller>=6.13.0",
    "ruff>=0.11.9",
    "setuptools>=80.4.0",
]
